ATLAS-533: geoData Tile Service - unit tests